[package]
name = "polynomial_multiplication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num-traits = "0.2.15"
num-complex = "0.4.2"
ndarray = "0.15.6"
polars = "*"
polars-io = "*"